# kernel-launcher-amdgpu

./: CMakeLists.txt  README.md  rebuild.sh
blob/: vector-add-2.co_v1  vector-add-2.co_v2
hip/: README.md
hip/vector_add/: build.sh  vector_add.cpp  vector_add_kernel.cpp  vector_add_kernel_gfx900.s  vector_add_kernel_gfx906.s
src/: CMakeLists.txt  backend.h  hsa_backend.cpp  hsa_backend.h  main.cpp
src/kernel/: CMakeLists.txt  asm-kernel.s  vector-add-2.s  vector-add.s
utils/dump_amd_kernel_code_t/: .gitignore  amd_kernel_code_t.cpp  build.sh
